--- a/updated/design/navbar.css
+++ b/updated/design/navbar.css
@@ -11,6 +11,10 @@
     font-family: wayward;
     src: url(../assets/WaywardSans-Regular.otf);
 }
+@font-face {
+    font-family: seui;
+    src: url(../assets/SEGOEUI.TTF);
+}
 
 *
 {
@@ -21,7 +25,10 @@ a {
   color: #000;
 }
 
-
+body
+{
+   font-family: seui;
+}
 .headers {
   position: fixed;
   width: 100%;
