work page changed

--- a/updated/design/navbar.css
+++ b/updated/design/navbar.css
@@ -292,10 +292,11 @@ html
 }*/
 
 
-@media screen and (min-width:2560px) 
+/*@media screen and (min-width:2560px) 
 {
     html { font-size: 2rem; }
 
     .container { max-width: 2000px; } 
 }
 
+*/
