--- a/updated/design/navbar.css
+++ b/updated/design/navbar.css
@@ -39,7 +39,8 @@ body
   position: fixed;
   width: 100%;
   z-index: 3;
-  margin-top: 30px;
+  padding-top: 30px;
+  background-color:white;
 }
 
 .headers ul {
@@ -279,6 +280,12 @@ body,html
 html 
 {
  font-size: 1rem; 
+}
+
+
+
+.actives {
+     box-shadow: 0 0 10px rgba(0,0,0,0.4);   
 }
 
 /*@media (min-width: 576px) {
