--- a/updated/design/navbar.css
+++ b/updated/design/navbar.css
@@ -211,13 +211,32 @@ h3 {
   margin-top: 15px !important ;
 }
 
-.contact-button
+/*.contact-button
 {
   background-color: #06D876 !important;
   border-radius: 50px;
   color: white !important;
   font-size: 10pt !important;
-/*  box-shadow: 0px 12px 21px -9px rgba(6,216,118,0.89);*/
+/*  box-shadow: 0px 12px 21px -9px rgba(6,216,118,0.89);
+}*/
+
+
+.contact-button
+{
+
+background: url('../assets/button.png');
+
+background-size: auto auto;
+
+border-radius: 50px;
+
+color: white !important;
+
+font-size: 10pt !important;
+
+background-size: cover;
+
+/*box-shadow: 0px 12px 21px -9px rgba(6,216,118,0.89);*/
 }
 
 .menu
