--- a/updated/design/navbar.css
+++ b/updated/design/navbar.css
@@ -211,17 +211,17 @@ h3 {
   margin-top: 15px !important ;
 }
 
-/*.contact-button
+.contact-button
 {
   background-color: #06D876 !important;
   border-radius: 50px;
   color: white !important;
   font-size: 10pt !important;
-/*  box-shadow: 0px 12px 21px -9px rgba(6,216,118,0.89);
-}*/
+  box-shadow: 0px 5px 0px -2px rgb(31,235,112,0.3);
+}
 
 
-.contact-button
+/*.contact-button
 {
 
 background: url('../assets/button.png');
@@ -237,7 +237,7 @@ font-size: 10pt !important;
 background-size: cover;
 
 /*box-shadow: 0px 12px 21px -9px rgba(6,216,118,0.89);*/
-}
+}*/
 
 .menu
 {
@@ -307,22 +307,26 @@ html
      box-shadow: 0 0 10px rgba(0,0,0,0.4);   
 }
 
-/*@media (min-width: 576px) {
-    html { font-size: 1.25rem; }
+
+
+
+/*@media screen and (min-width:1920px)
+{
+    html { font-size: 1.3rem; }
 }
-@media (min-width: 768px) {
+@media screen and (min-width:1921px)
+{
     html { font-size: 1.5rem; }
 }
-@media (min-width: 992px) {
-    html { font-size: 1.75rem; }
-}*/
 
-
-/*@media screen and (min-width:2560px) 
+@media screen (min-width:1680px) and (max-width: 1921)
 {
-    html { font-size: 2rem; }
-
-    .container { max-width: 2000px; } 
+    html { font-size: 1.3rem; }
 }
 
+
+@media screen and (min-width:2560px)
+{
+    html { font-size: 2rem; }
+}
 */
