--- a/updated/design/navbar.css
+++ b/updated/design/navbar.css
@@ -129,9 +129,10 @@ body
 }
 
 .headers .menu-btn:checked ~ .menu {
-  max-height: 400px;
+  max-height: 100vh;
+  height: 100vh;
+  margin-top: 17vh !important;
 }
-
 
 
 
@@ -173,33 +174,6 @@ body
 }
 
 
-@media screen and (max-width: 767px) {
-.headers {
-    margin-top: 0px;
-    background-color: white;
-    padding-top: 5px;
-         }
- .headers li a 
- {
-  padding: 20px 15px;
- }
- .headers ul {
-    margin: 0% 5% 2% 2%;
-  }
- .headers .logo
-  {
-    margin-left: 0px;
-  }
-
-}
-
-/*
-h2 {
-    font-family: wayward;
-    font-size: var(--text-logo);
-    font-weight: normal;
-} */
-
 
 h3 {
     font-family: 'Roboto', sans-serif;
@@ -213,31 +187,13 @@ h3 {
 
 .contact-button
 {
-  background-color: #06D876 !important;
+  background-color: #06D876;
   border-radius: 50px;
   color: white !important;
   font-size: 10pt !important;
   box-shadow: 0px 5px 0px -2px rgb(31,235,112,0.3);
 }
 
-
-/*.contact-button
-{
-
-background: url('../assets/button.png');
-
-background-size: auto auto;
-
-border-radius: 50px;
-
-color: white !important;
-
-font-size: 10pt !important;
-
-background-size: cover;
-
-/*box-shadow: 0px 12px 21px -9px rgba(6,216,118,0.89);*/
-}*/
 
 .menu
 {
@@ -278,14 +234,6 @@ body,html
   overflow-x: hidden;
 }
 
-@media screen and (max-width:768px) 
-{
-.bg-img
-{
-  
-  background-position: center;
-}
-}
 
 
 html 
@@ -302,23 +250,46 @@ html
 
 
 
-/*@media screen and (min-width:1920px)
-{
-    html { font-size: 1.3rem; }
-}
-@media screen and (min-width:1921px)
-{
-    html { font-size: 1.5rem; }
-}
+@media screen and (max-width: 767px) {
+.headers {
+    margin-top: 0px;
+    background-color: white;
+    padding-top: 5px;
+         }
+ .headers li a 
+ {
+  padding: 20px 15px;
+  color: black;
+  font-size: 13pt;
+  font-family: seui;
+ }
+ .contact-button
+  {
+    background-color: transparent !important;
+    border-radius: 50px; 
+    box-shadow: none !important;
+    font-size: 13pt !important;
+    color: black !important;
+  }
+ .headers li a:hover
+ {
+  font-family: seui-b;
+  font-size: 15pt !important;
+ }
+ .headers ul {
+    text-align: center;
+  }
+ .headers .logo
+  {
+    margin-left: 0px;
+  }
+    .bg-img
+  {
+    background-position: center;
+  }
 
-@media screen (min-width:1680px) and (max-width: 1921)
-{
-    html { font-size: 1.3rem; }
-}
 
 
-@media screen and (min-width:2560px)
-{
-    html { font-size: 2rem; }
+  
+
 }
-*/
