--- a/updated/design/navbar.css
+++ b/updated/design/navbar.css
@@ -201,6 +201,7 @@ h3 {
   color: white !important;
   font-size: 10pt !important;
   box-shadow: 0px 5px 0px -2px rgb(31,235,112,0.3);
+  margin-left: 10px;
 }
 
 
@@ -311,6 +312,7 @@ html
     box-shadow: none !important;
     font-size: 13pt !important;
     color: #212020 !important;
+    margin-left: 0px;
   }
  .headers li a:hover
  {
@@ -350,3 +352,13 @@ html
     display: flex !important; 
   }
 }
+
+@media screen and (max-width: 220px)
+   {
+      .headers .logo {
+        margin-left: 0px;
+        font-size: 15px !important;
+        padding: 15px 20px !important;
+      }
+
+    }
