upto day-11 changes updated

--- a/css-challenge/assets/style/shared-variable.less
+++ b/css-challenge/assets/style/shared-variable.less
@@ -1,5 +1,5 @@
 
-
 @body-content-height : 55vh;
-@header-font-color :  #343633;
-@app-background-color:  #eeeeee;
+@header-background-color:#673AB7;
+@header-font-color :  #FAFAFA;
+@app-background-color:  #E5E5E5;
