--- a/css-challenge/assets/style/common-styles.less
+++ b/css-challenge/assets/style/common-styles.less
@@ -1,18 +1,28 @@
 @import "./shared-variable.less";
 
-
-@font-face {
-    font-family: fut;
-    src: url(../fonts/futuraMediumBT.ttf) format("opentype");
-}
-
-.absolute-center {
+.absolute {
+    &-center{
     position: absolute;
     top:0;
     bottom: 0;
     left: 0;
     right: 0;	
     margin: auto;
+    }
+    &-top{
+    position: absolute;
+    top:0;
+    left: 0;
+    right: 0;	
+    margin: auto;
+    }
+    &-bottom{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;	
+    margin: auto;
+    }
 }
 
 .flex-center{
@@ -22,7 +32,8 @@
 }
 
 .day-container{
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    border-radius: 8px;
+    box-shadow: 4px 8px 16px 0 rgba(69,69,69,0.1);
+    border-radius: 2px;
     height: @body-content-height;
+    overflow: hidden;
 }
