--- a/demo/Assets/styles/index.css
+++ b/demo/Assets/styles/index.css
@@ -16,6 +16,10 @@ body {
           user-select: none;
 }
 
+.font-mr {
+  margin-right: 4px;
+}
+
 .navbar {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -126,13 +130,15 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: "Opensans-regular";
+  font-size: 16px;
+  color: #212121;
+  line-height: 1.5;
 }
 
 .container .project-section .card .card-footer a {
-  font-family: "Opensans-regular";
-  font-size: 16px;
-  text-decoration: underline;
   color: #212121;
+  text-decoration: underline;
 }
 
 .container .footer-section {
