--- a/demo/Assets/styles/index.scss
+++ b/demo/Assets/styles/index.scss
@@ -13,6 +13,10 @@ body {
   user-select: none;
 }
 
+.font-mr{
+ margin-right: 4px;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -88,11 +92,13 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        a {
-          font-family: "Opensans-regular";
-          font-size: 16px;
+        font-family: "Opensans-regular";
+        font-size: 16px;
+        color: #212121;
+        line-height: 1.5;
+        a {    
+          color: #212121;                 
           text-decoration: underline;
-          color: #212121;
         }
       }
     }
